; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-query.c_cond_skip_fup_tip_fail.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-query.c_cond_skip_fup_tip_fail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ptu_decoder_fixture = type { %struct.pt_encoder, %struct.pt_query_decoder }
%struct.pt_encoder = type { i32* }
%struct.pt_query_decoder = type { i32 }
%struct.ptunit_result = type { i32 }

@pt_ipc_sext_48 = common dso_local global i32 0, align 4
@ptu_sync_decoder = common dso_local global i32 0, align 4
@pte_bad_query = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ptu_decoder_fixture*)* @cond_skip_fup_tip_fail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cond_skip_fup_tip_fail(%struct.ptu_decoder_fixture* %0) #0 {
  %2 = alloca %struct.ptunit_result, align 4
  %3 = alloca %struct.ptu_decoder_fixture*, align 8
  %4 = alloca %struct.pt_query_decoder*, align 8
  %5 = alloca %struct.pt_encoder*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store %struct.ptu_decoder_fixture* %0, %struct.ptu_decoder_fixture** %3, align 8
  %10 = load %struct.ptu_decoder_fixture*, %struct.ptu_decoder_fixture** %3, align 8
  %11 = getelementptr inbounds %struct.ptu_decoder_fixture, %struct.ptu_decoder_fixture* %10, i32 0, i32 1
  store %struct.pt_query_decoder* %11, %struct.pt_query_decoder** %4, align 8
  %12 = load %struct.ptu_decoder_fixture*, %struct.ptu_decoder_fixture** %3, align 8
  %13 = getelementptr inbounds %struct.ptu_decoder_fixture, %struct.ptu_decoder_fixture* %12, i32 0, i32 0
  store %struct.pt_encoder* %13, %struct.pt_encoder** %5, align 8
  store i32 188, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  store i32 %14, i32* %8, align 4
  %15 = load %struct.pt_encoder*, %struct.pt_encoder** %5, align 8
  %16 = load i32, i32* @pt_ipc_sext_48, align 4
  %17 = call i32 @pt_encode_fup(%struct.pt_encoder* %15, i32 0, i32 %16)
  %18 = load %struct.pt_encoder*, %struct.pt_encoder** %5, align 8
  %19 = getelementptr inbounds %struct.pt_encoder, %struct.pt_encoder* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  store i32* %20, i32** %9, align 8
  %21 = load %struct.pt_encoder*, %struct.pt_encoder** %5, align 8
  %22 = load i32, i32* @pt_ipc_sext_48, align 4
  %23 = call i32 @pt_encode_tip(%struct.pt_encoder* %21, i32 0, i32 %22)
  %24 = load %struct.pt_encoder*, %struct.pt_encoder** %5, align 8
  %25 = call i32 @pt_encode_tnt_8(%struct.pt_encoder* %24, i32 0, i32 1)
  %26 = load i32, i32* @ptu_sync_decoder, align 4
  %27 = load %struct.pt_query_decoder*, %struct.pt_query_decoder** %4, align 8
  %28 = call i32 @ptu_check(i32 %26, %struct.pt_query_decoder* %27)
  %29 = load %struct.pt_query_decoder*, %struct.pt_query_decoder** %4, align 8
  %30 = call i32 @pt_qry_cond_branch(%struct.pt_query_decoder* %29, i32* %8)
  store i32 %30, i32* %6, align 4
  %31 = load i32, i32* %6, align 4
  %32 = load i32, i32* @pte_bad_query, align 4
  %33 = sub nsw i32 0, %32
  %34 = call i32 @ptu_int_eq(i32 %31, i32 %33)
  %35 = load %struct.pt_query_decoder*, %struct.pt_query_decoder** %4, align 8
  %36 = getelementptr inbounds %struct.pt_query_decoder, %struct.pt_query_decoder* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = load i32*, i32** %9, align 8
  %39 = call i32 @ptu_ptr_eq(i32 %37, i32* %38)
  %40 = load i32, i32* %8, align 4
  %41 = load i32, i32* %7, align 4
  %42 = call i32 @ptu_int_eq(i32 %40, i32 %41)
  %43 = call i32 (...) @ptu_passed()
  %44 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  store i32 %43, i32* %44, align 4
  %45 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %2, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  ret i32 %46
}

declare dso_local i32 @pt_encode_fup(%struct.pt_encoder*, i32, i32) #1

declare dso_local i32 @pt_encode_tip(%struct.pt_encoder*, i32, i32) #1

declare dso_local i32 @pt_encode_tnt_8(%struct.pt_encoder*, i32, i32) #1

declare dso_local i32 @ptu_check(i32, %struct.pt_query_decoder*) #1

declare dso_local i32 @pt_qry_cond_branch(%struct.pt_query_decoder*, i32*) #1

declare dso_local i32 @ptu_int_eq(i32, i32) #1

declare dso_local i32 @ptu_ptr_eq(i32, i32*) #1

declare dso_local i32 @ptu_passed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
